# keiko-for-teaching

./: .env.example  .gitignore  .redocly.yaml  FEATURE_IDEAS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  beta_auth_users.txt  dev-logs.sh  dev-restart.sh  dev-start.sh  dev-status.sh  dev-stop.sh  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.augment/rules/: never _use_emojis.md
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/workflows/: ci.yaml  deploy.yaml
apps/frontend/: Dockerfile  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/frontend/e2e/: chat.spec.ts  documents.spec.ts  ideas.spec.ts
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/src/hooks/: use-auth.ts  use-chat.ts  use-documents.ts  use-ideas.ts  use-news.ts
apps/frontend/src/i18n/: request.ts  routing.ts
apps/frontend/src/lib/: api.ts
apps/frontend/src/stores/: chat.ts  ideas.ts  news.ts  settings.ts  user.ts
apps/frontend/src/test/: setup.ts  utils.tsx
docs/: PHASE5_TESTING_SUMMARY.md  ROLLBACK_PROCEDURES.md  TESTING.md
docs/api/: API_CONTRACTS.md  README.md
docs/development/: DEVELOPMENT_STANDARDS.md  STYLING.md
infra/bicep/: clean.sh  deploy.sh  main.bicep  main.json  parameters.dev.json  parameters.prod.json
infra/bicep/modules/: acr.bicep  aks.bicep  apim.bicep  app-insights.bicep  container-app.bicep  container-apps-env.bicep  container-registry.bicep  foundry.bicep  identity.bicep  key-vault-secrets.bicep  key-vault.bicep  keyvault.bicep  log-analytics.bicep  managed-identity.bicep  openai.bicep  redis-cache.bicep  redis.bicep  role-assignments.bicep  search.bicep  storage-account.bicep
infra/kubernetes/base/: auth-deployment.yaml  cert-manager.yaml  chat-deployment.yaml  configmaps.yaml  deployment-config.yaml  document-deployment.yaml  frontend-deployment.yaml  gateway-deployment.yaml  ingestion-deployment.yaml  ingress-nginx.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  search-deployment.yaml  secrets.yaml.template  services.yaml  user-deployment.yaml
infra/kubernetes/base/monitoring/: alert-rules.yaml  alertmanager-config.yaml  grafana-dashboards.yaml  grafana-deployment.yaml  loki-deployment.yaml  opentelemetry-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml  promtail-config.yaml
infra/kubernetes/base/secrets/: csi-secrets-store.yaml  external-secrets-operator.yaml
infra/kubernetes/base/service-mesh/: istio-installation.yaml  mtls-config.yaml  (+1 more)
infra/kubernetes/production/: kustomization.yaml
infra/kubernetes/staging/: kustomization.yaml
infra/scripts/: deploy-all.sh
scripts/: dev-start.sh  dev-stop.sh  start-services-local.sh
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/app/: config.py  main.py
services/auth-service/tests/: __init__.py  conftest.py
services/chat-service/: Dockerfile  openapi.yaml  pyproject.toml
services/chat-service/app/: config.py  main.py
services/chat-service/tests/: test_chat_integration.py
services/document-service/: Dockerfile  openapi.yaml  pyproject.toml
services/document-service/app/: __init__.py  config.py  main.py
services/document-service/tests/: __init__.py  conftest.py
services/gateway-bff/: Dockerfile  openapi.yaml  pyproject.toml
services/gateway-bff/app/: config.py  main.py
services/ideas-service/: Dockerfile  openapi.yaml  pyproject.toml
services/ideas-service/app/: config.py  dependencies.py  main.py  models.py
services/ideas-service/app/routers/: ideas.py
services/ideas-service/app/services/: search.py  storage.py
services/ingestion-service/: Cargo.toml  Dockerfile  build.rs
services/ingestion-service/src/: main.rs
services/ingestion-service/src/api/: mod.rs
services/ingestion-service/src/grpc/: mod.rs
services/ingestion-service/src/parser/: azure_doc_intelligence.rs  docx.rs  html.rs  local_pdf.rs  mod.rs  traits.rs
services/ingestion-service/src/splitter/: mod.rs  sentence.rs
services/ingestion-service/tests/: integration_test.rs
services/news-service/: Dockerfile  pyproject.toml
services/news-service/app/: config.py  main.py  models.py  scheduler.py
services/news-service/app/routers/: news.py
services/news-service/app/services/: news_service.py  storage.py
services/search-service/: Dockerfile  openapi.yaml  pyproject.toml
services/search-service/app/: __init__.py  config.py  main.py
services/search-service/app/routers/: health.py  search.py
services/search-service/tests/: __init__.py  conftest.py
services/search-service/tests/integration/: test_search_api.py
services/search-service/tests/unit/: test_search.py
services/shared/: __init__.py  azure_identity.py  cache.py  monitoring.py
services/user-service/: Dockerfile  pyproject.toml
services/user-service/app/: __init__.py  config.py  main.py
tools/scripts/: database-rollback.sh  install-infrastructure.sh  rollback.sh  validate-openapi.sh
(+72 files in other folders)
